# elevatus-technical-assignment

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  setup.sh
configurations/: config.py
database/: db.py
routes/: candidates.py  users.py
schemas/: candidates_schema.py  users_schema.py
tests/: conftest.py
tests/candidates/: test_candidate_endpoints.py
tests/users/: test_users_endpoint.py
utils/: constants.py
views/: candidates.py  users.py
